--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -35,9 +35,6 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697777.md#1" target="_blank">善用冷冻技巧  让你下厨事半功倍</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697777.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1279409749-150x120.jpg" align ="left"></a>只要懂得冷冻食材和食物的艺术，就能借着大量烹调，减少购物和烹饪的频率，增加生活中可运用的时间，让我们不用在慌乱中度过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688237.md#1" target="_blank">剧烈腰痛 三针治愈</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11688237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/iStock-1125554234-150x120.jpg" align ="left"></a>腰椎间盘突出症：腰椎间盘突出症：腰椎间盘突出，这个词到处都能听到。它有几个特点： 腰腿为主，疼痛感较强； 多发，易复发，多因久坐，开车，或抬重物等引起加重； 更重要的是，这是一种自愈性的疾病。这类的长期、久治不愈的腰痛严重影响着病人的身体健康。很多病人长期服用止痛药，却不知道针灸是个很好的治疗方法。因为它快速有效，且无.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 3:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690262.md#1" target="_blank">热水是“消毒宝物”3原则防食物中毒</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690262.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/boiled-water-food-poison2-1203-150x120.jpg" align ="left"></a>吃是人生一大享受，但若食物中毒就得不偿失。煮沸的热水是最朴实的消毒宝物，而平时处理食物时遵循三大原则，可以帮助你预防细菌性食物中毒。预防食物中毒：“热汤”消毒。预防细菌性食物中毒有三大原则：清洁、迅速、加热。煮饭前把手洗干净，可以避免沾染细菌，吃饭前及放学一回家，马上把手洗干净，杜绝跟着自己回家的细菌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697480.md#1" target="_blank">全美地产协会：2020涨幅趋于平稳</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/12/812291805381002-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
-全国房地产经纪人协会（National Association of Realtors，简称NAR）预测2020年全美房价和房屋销量都会增长。房价攀升导致更多人买不起房，NAR的地产首席经济学家，向总统川普和他的竞争对手民主党传达一条信息：你们需要更多地关注美国住房短缺的问题。
-
-据圣荷西信使.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:09 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691683.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】房子出租 物业经理需应对的棘手问题</a><br></h3>要成为物业管理经理，首先必须要获得执照。获得执照不难，但是处理物业管理并非易事，需要更多的经验和手段。结合几年物业管理的经验，我整理了房子出租会出现的三个棘手问题，供读者与业主参考。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
