--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690899.md#1" target="_blank">【名家专栏】感恩节的沉思：对富足的思考</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/thanksgiving-parade-1200x884-150x120.jpg" align ="left"></a>感恩节是典型的美国节日，融合了世俗和神圣——融合了希腊—罗马和犹太—基督教的世界观，塑造了我们国家的特性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank">香港，你会好起来吗？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/520231ac92e9008b0d77409b6cbdb325-150x120.jpg" align ="left"></a>那年你带我上太平山顶，我的眼里是维多利亚港的醉人景观，你的眼里是对九七后的茫然与期盼。隔年你来台北，我带你上阳明山，双城都有美丽的山，亲吻我们的风，后来却很不一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 6:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690518.md#1" target="_blank">周晓辉：川普签法案示硬汉形象 北京可读懂？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280849562188-600x400-1-150x120.jpg" align ="left"></a>与中共的对决已不可避免，最重要战场就是香港，因为美国随之而来的依据法案的诸多行动，以及12月份中旬的加征关税，将会在中共内部掀起风暴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690576.md#1" target="_blank">夏小强：为何川普总统成为“香港英雄”？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690576.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/01-trump-june27-Samira-Bouaou.jpg-150x120.jpg" align ="left"></a>2019年11月27日，美国总统川普签署了《香港人权与民主法案》和《禁止向香港出口防暴装备法案》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690481.md#1" target="_blank">颜丹：日本人背儒家《论语》破纪录说明了什么？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690481.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/800px-Commentaries_of_the_Analects_of_Confucius-600x400-1-3-3-2-1-150x120.jpg" align ="left"></a>今年11月24日，一项新的吉尼斯世界纪录在日本产生了。这一天，日本栃木县壬生町举办了一场众人齐背儒家经典著作《论语》的活动。在前来挑战的818位居民中，最小的只有3岁，最大的已超过90岁。挑战者们需要跟着节拍器的节奏齐声背诵《论语》5分钟以上。最终，748人没有忘词，一气呵成，齐声背完了《论语》中的18则内容。
@@ -20,8 +22,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank">王友群：“干涉中国内政”是中共的洗脑谎言</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/01-trump-june27-Samira-Bouaou.jpg-150x120.jpg" align ="left"></a>每当国际社会对中共残酷镇压中国民众进行谴责和制裁时，中共总以“不许干涉中国内政”为借口进行抵赖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 2:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank">夏小强：投诚澳洲特工王立强身份真假辩</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-600x400-1-1-150x120.jpg" align ="left"></a>王立强事件在台湾继续发酵，进一步印证了王立强所说细节的准确。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank">程晓容：王立强案重挫中共 四大重点解读</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-150x120.jpg" align ="left"></a>王立强的指证将中共的海外渗透网撕开了一个大洞，中共职业和外围特工在亚太区域的活动将受到更有针对性的调查和打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686153.md#1" target="_blank">王赫：习近平政治上开始转弯？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686153.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1172509081-150x120.jpg" align ="left"></a>习近平目前处境艰难，众所周知。有时局观察人士，研读了11月26日习近平在中央全面深化改革委员会第十一次会议上的讲话（据新华社报道），认为这“透露出政治上转弯的信息”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686104.md#1" target="_blank">海风：该给港人下跪的又何止是大陆警察</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1910310916192188-150x120.jpg" align ="left"></a>互联网的出现，人们只要拥有一部手机，一瞬间就能拥有一双“千里眼”和一对“顺风耳”。这是人类文明史上的一个重大飞跃。然而，对于依靠谎言和暴力治国的中共专制统治者来说，这种“千里眼”和“顺风耳”的出现，无疑就是他们的克星。因为魔鬼最害怕的是阳光，专制统治者最害怕的就是信息透明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 11:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690670.md#1" target="_blank">胡少江：香港社会的痈疽 是极权政府的宝贝</a><br></h3>香港区议会选举结束之后，备受中国政府推崇的香港“光头警长”刘泽基再次自愿地站在了风口浪尖。支持北京的建制派在此次选举中彻底溃败，在得知选举结果之后，刘泽基立即在大陆政府严密控制的微博发文，对防火墙内的大陆网民抱怨道，“选举结果证明百分之六十的香港市民是支持暴民的”，建议中央政府“停止对香港人的帮助，就让他们看看没有祖国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11690605.md#1" target="_blank">廖祖笙：法治的虚无是乱港之源</a><br></h3>习近平先生，因“反送中”扬起的风波，在香港已经持续了很长时间，曾经亮丽的“东方之珠”，在愈演愈烈的官民对立中，一片黯淡，一地鸡毛，已被血与火洗礼久矣，估计在相当长的一段时间内，都难于复原。居心叵测的“维稳”势力，在人为制造道路以目，在禁绝人们谈论“反送中”，这只会让香港的动荡，持续得更是旷日持久。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/22/n11674926.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（5）</a><br></h3>《易经》一般分为易理、易数、易像、易占四个方面。易理从狭义上讲专指与“数像”相对的“义理”，广义上讲泛指《易经》经传中所蕴涵的道理。这个方面大致对应西方的哲学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/29/n11689134.md#1" target="_blank">正本清源：救世</a><br></h3>本应美好地球村，是谁搅得天地昏？
@@ -77,13 +78,5 @@
 天灭中共旗一举，票箱顿将暴恐隔。
 撑警亲共者惨败，港警警嫂亦倒戈。
 顺天民意显天意，逆天口张党结舌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/28/n11686216.md#1" target="_blank">云鹤天：对香港区选结果党怎么看</a><br></h3>香港如果真普选
-红色控制就完蛋
-大陆如果要民主
-红色江山不稳固
-中英声明是废纸
-承诺决不能落实
-高压维稳是根本
-民主自由党入坟......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
